--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,5 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build
       run: cargo build --verbose
+    - name: Install cargo-aoc
+      run: cargo install cargo-aoc
     - name: Run tests
       run: cargo test --verbose
